<resources>
    <string name="app_name">Riddle</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="provinceStr">จังหวัดในไทย</string>
    <string name="vegetableStr">พืชผัก</string>
    <string name="fruitStr">ผลไม้</string>
    <string name="foodStr">อาหาร</string>
    <string name="categoryMenu">เลือกหมวดหมู่</string>
    <string name="yourScore"> Your Score : 0</string>
    <string name="highScore">High Score is </string>
    <string name="ok">OK</string>
    <string name="replay">REPLAY</string>
    <string name="giveUp">Give up</string>
    <string name="dialog_message">You have played all the words in this category.!</string>
</resources>