<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/bg_category"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:shadowColor="#7FF6F5F5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/categoryMenu"
            android:textColor="@color/black"
            app:strokeColor="@color/white"
            app:strokeWidth="7dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/itim"
            android:text="@string/provinceStr"
            android:textColor="@color/white"
            app:backgroundTint="@color/stokeColr"
            app:strokeColor="@color/white"
            android:textSize="20sp"
            app:strokeWidth="3dp"/>

        <Button
            android:id="@+id/vegetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/itim"
            android:text="@string/vegetableStr"
            android:textColor="@color/white"
            app:backgroundTint="@color/stokeColr"
            app:strokeColor="@color/white"
            android:textSize="20sp"
            app:strokeWidth="3dp"/>
        <Button
            android:id="@+id/fruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/itim"
            android:text="@string/fruitStr"
            android:textColor="@color/white"
            app:backgroundTint="@color/stokeColr"
            app:strokeColor="@color/white"
            android:textSize="20sp"
            app:strokeWidth="3dp"/>

        <Button
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/itim"
            android:text="@string/foodStr"
            android:textColor="@color/white"
            app:backgroundTint="@color/stokeColr"
            app:strokeColor="@color/white"
            android:textSize="20sp"
            app:strokeWidth="3dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>